Rewrote cluter evaluation as tests. evaluateCloseness not comparing right kinds of vectors.